# haskell-semver

./: LICENSE  README.md  semver.cabal
app/: Main.hs
src/: Semver.hs  Typechecker.hs
test/: Test1.hs  Test2.hs
