name:                semver
version:             0.1.0.0
synopsis:            Semantic Versioning
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
author:              Peter-Jan Deltour & Thomas Winant
maintainer:          peterjan.deltour@student.kuleuven.be
copyright:           Peter-Jan Deltour & Thomas Winant
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Semver
                     , Typechecker
  build-depends:       base
                     , containers
                     , ghc
                     , ghc-paths
                     , transformers
  default-language:    Haskell98


executable semver
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , semver
  default-language:    Haskell98
